html validation annotation + parsing into custom blocks